--- a/crayon/assets/language/de.json
+++ b/crayon/assets/language/de.json
@@ -73,5 +73,24 @@
     "a-question-requires-at-least-two-responses":"Eine Frage erfordert mindestens zwei Antworten!",
     "a-question-requires-a-question-title":"Eine Frage erfordert einen Fragetitel!",
     "quiz-requires-a-title":"Ein Quiz erfordert einen Titel!",
-    "response-requires-at-least-two-chars":"Antwort erfordert mindestens zwei Zeichen!"
+    "response-requires-at-least-two-chars":"Antwort erfordert mindestens zwei Zeichen!",
+    "1-day":"Montag",
+    "2-day":"Dienstag",
+    "3-day":"Mittwoch",
+    "4-day":"Donnerstag",
+    "5-day":"Freitag",
+    "6-day":"Samstag",
+    "7-day":"Sonntag",
+    "1-month":"Januar",
+    "2-month":"Februar",
+    "3-month":"März",
+    "4-month":"April",
+    "5-month":"Mai",
+    "6-month":"Juni",
+    "7-month":"Juli",
+    "8-month":"August",
+    "9-month":"September",
+    "10-month":"Oktober",
+    "11-month":"November",
+    "12-month":"Dezember"
 }
