--- a/crayon/assets/language/en.json
+++ b/crayon/assets/language/en.json
@@ -73,5 +73,24 @@
     "a-question-requires-at-least-two-responses":"A question requires at least two responses!",
     "a-question-requires-a-question-title":"A question requires a question title!",
     "quiz-requires-a-title":"A quiz requires a title!",
-    "response-requires-at-least-two-chars":"Response requires at least two characters!"
+    "response-requires-at-least-two-chars":"Response requires at least two characters!",
+    "1-day":"Monday",
+    "2-day":"Tuesday",
+    "3-day":"Wednesday",
+    "4-day":"Thursday",
+    "5-day":"Friday",
+    "6-day":"Saturday",
+    "7-day":"Sunday",
+    "1-month":"January",
+    "2-month":"February",
+    "3-month":"March",
+    "4-month":"April",
+    "5-month":"May",
+    "6-month":"June",
+    "7-month":"July",
+    "8-month":"August",
+    "9-month":"September",
+    "10-month":"October",
+    "11-month":"November",
+    "12-month":"December"
 }
