using theme for dashboard content

--- a/crayon/assets/language/de.json
+++ b/crayon/assets/language/de.json
@@ -35,7 +35,7 @@
     "profile":"Profil",
     "brightness":"Helligkeit",
     "logout":"Ausloggen",
-    "myLectures":"Meine Vorlesungen",
+    "myLectures":"Meine Kurse",
     "addLecture":"Vorlesung hinzufügen",
     "title":"Titel",
     "monday":"Montag",
