--- a/crayon/assets/language/fr.json
+++ b/crayon/assets/language/fr.json
@@ -68,6 +68,7 @@
     "bad-format":"Mauvaise demande",
     "weak-password":"Le mot de passe est trop faible",
     "email-already-in-use":"L'email existe déjà",
+    "email-already-exists":"L'email existe déjà",
     "add-time-interval":"Ajouter un intervalle de temps",
     "failed-to-remove-file":"Échec de la suppression de la diapositive",
     "quiz-requires-at-least-one-question":"Un quiz nécessite au moins une question!",
