--- a/crayon/assets/language/fr.json
+++ b/crayon/assets/language/fr.json
@@ -104,6 +104,25 @@
     "send":"Envoyer",
     "reset-password-link-was-send-to-your-email":"Le lien de réinitialisation du mot de passe a été envoyé à votre adresse e-mail",
     "complete-all-the-fields" :"Veuillez remplir tous les champs!",
-    "user-not-found":"Aucun utilisateur trouvé sous cet e-mail"
+    "user-not-found":"Aucun utilisateur trouvé sous cet e-mail",
+
+    "back-to-dashboard":"Retour au tableau de bord",
+    "skip":"Passez",
+    "gameshow":"Jouons",
+    "join":"Rejoindre",
+    "username":"Nom d'utilisateur",
+    "scan-lecture":"Scan",
+    "no-permission":"Pas d'autorisation d'utiliser l'appareil photo",
+    "leave-quiz-lobby":"Voulez-vous quitter la salle d'attente du Quiz ?",
+    "delete-lecture":"delete-lecture",
+    "requires-leaving-lobby":"Vous devez quitter votre salon de quiz actuel pour exécuter cette opération",
+    "no-courses-enrolled":"Vous n'êtes inscrit à aucun cours",
+    "a-day-free":"Temps libre",
+    "entered-waiting-room":"Vous avez rejoint la salle d'attente",
+    "lecture-already-enrolled":"Vous êtes déjà inscrit à ce cours.",
+    "lecture-added-sucess":"Cours ajoutée avec succès",
+    "lecture-removed-sucess":"Cours supprimée avec succès",
+    "quesiton-asked-sucess":"Question posée avec succès",
+    "join-lobby-success":"Cours joint avec succès"
     
 }
