adding automiatique deletion of lectures if lecture was removed from management system

--- a/crayon/assets/language/en.json
+++ b/crayon/assets/language/en.json
@@ -122,5 +122,7 @@
     "lecture-added-sucess":"Lecture added successfully",
     "lecture-removed-sucess":"Successfully removed lecture",
     "quesiton-asked-sucess":"Successfully asked question",
-    "join-lobby-success":"Successfully joined lecture"
+    "join-lobby-success":"Successfully joined lecture",
+    "failed-to-automatically-remove-lecture":"Failed to remove non existing lecture",
+    "successfully-automatically-remove-lecture":"A lecture which does not exist anymore was deleted automatically"
 }
