--- a/crayon/assets/language/de.json
+++ b/crayon/assets/language/de.json
@@ -122,5 +122,7 @@
     "lecture-added-sucess":"Vorlesung erfolgreich hinzugefügt",
     "lecture-removed-sucess":"Vorlesung erfolgreich entfernt",
     "quesiton-asked-sucess":"Erfolgreich gestellte Frage",
-    "join-lobby-success":"Vorlesung erfolgreich beigetreten"
+    "join-lobby-success":"Vorlesung erfolgreich beigetreten",
+    "failed-to-automatically-remove-lecture":"Fehler beim Entfernen nicht vorhandener Vorlesung",
+    "successfully-automatically-remove-lecture":"Eine nicht mehr existierende Vorlesung wurde automatisch gelöscht"
 }
